# PerceptionRT

./: .gitignore  README.md  requirements.txt  setup.py
docker/: README.md
docker/lidar3d/: .env  Dockerfile  docker-compose.yaml  env.Dockerfile
docs/: 0_Docker_Storage_Setup_KR_ENG.md  1_Setting_Environment_using_Docker.md  2_Preparing_Waymo_Dataset.md  3_Setting_Dev_Environments.md  3_Setting_OpenPCDet.md  5_Testing_Evaluation.md  6_Convert_Models.md  6_Inference_Pytorch_Models_on_ROS2(ubuntu20.04+Foxy)_using_Python.md  6_Inference_Pytorch_Models_on_ROS2_using_Python.md  7_Convert_Models.md  7_Testing_Evaluation_with_TensorRT.md  8_Inference_ROS2_TensorRT_Python.md  8_Testing_Evaluation_with_TensorRT.md  9_Inference_ROS2_TensorRT_Cpp.md  9_Inference_TensoRT_Models_on_ROS2(ubuntu20.04+Foxy)_using_Cpp.md  9_Inference_TensoRT_Models_on_ROS2_using_Cpp.md  9_Inference_TensoRT_Models_using_npy_files_and_Python.md
general/config/: config.py
general/datasets/augmentor/: database_sampler.py
general/datasets/custom/: custom_dataset.py
general/loss_functions/: loss_utils.py
general/networks/: nms_utils.py
general/utilities/: file_utils.py  transform_utils.py
inference_ros2/centerpoint/: CMakeLists.txt
inference_ros2/centerpoint/config/: config.yaml
inference_ros2/centerpoint/include/centerpoint/: centerpoint.hpp
inference_ros2/centerpoint/pybind/: CMakeLists.txt  main.py
inference_ros2/centerpoint/src/: CMakeLists.txt
inference_ros2/centerpoint/src/centerpoint/: centerpoint.cc  postprocess.cc
lidar3d_core/make/inference_ros2/: CMakeLists.txt
lidar3d_core/make/pybind/: CMakeLists.txt
object_detection/: export_onnx.py  inference_viz_tensorRT_dataNPY.py  npy_tensorRT_test.py  test.py  train.py
object_detection/datasets/dummy/: dummy_dataset.py
object_detection/datasets/kitti/kitti_object_eval_python/: evaluate.py
object_detection/detectors3d/centerpoint_pillar/: onnx_utils.py
pcdet/: version.py
pcdet/ops/iou3d_nms/: iou3d_nms_utils.py
pre/: 6_Inference_Pytorch_Models_on_ROS2(Humble)_using_Python.md  9_Inference_TensoRT_Models_on_ROS2(Humble)_using_Cpp.md  Dockerfile  _Dockerfile  _env.Dockerfile  env.Dockerfile
tools/: demo.py  export_onnx.py  ros2_demo.py
tools/ros2/: centerpoint_node.py
tools/ros2/centerpoint/: CMakeLists.txt
tools/ros2/centerpoint/include/centerpoint/: centerpoint.hpp  postprocess.hpp
tools/ros2/centerpoint/include/ros2/: detector.hpp
tools/ros2/centerpoint/launch/: centerpoint.launch.py
tools/ros2/centerpoint/src/: main.cc
tools/ros2/centerpoint/src/ros2/: detector.cc
tools/tensorrt/: CMakeLists.txt  module.cc
tools/tensorrt_tools/: CMakeLists.txt  module.cc
tools/tensorrt_tools/include/centerpoint/: wrapper.hpp
tools/tensorrt_tools/src/centerpoint/: wrapper.cc
tools/visualization/: inference_viz_tensorRT_dataNPY.py  open3d_viz_tensorRT_dataNPY.py  ros2_from_rosbag_rviz2.py  ros2rosbag_rviz2.py
tools/visualization/visual_utils/: open3d_vis_utils.py
